--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Sadcom Store</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
